# code-generator-for-springboot

./: .gitignore  .prettierrc  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  test.py
archetype-resources/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  build.gradle.kts  generator.sh  gradle.properties  pom.xml  renovate.json  settings.gradle.kts
archetype-resources/src/main/kotlin/: Application.kt
archetype-resources/src/main/kotlin/annotations/: AllowAnonymous.kt  AllowSignedIn.kt  AllowUserNotExist.kt  Authorize.kt  BuiltInRole.kt  CurrentUser.kt  NoArg.kt  Permission.kt
archetype-resources/src/main/kotlin/configurations/: AppConfiguration.kt  AppWebMvcConfigurer.kt  RedisConfiguration.kt  SwaggerConfiguration.kt  WechatConfiguration.kt  WxConfiguration.kt
archetype-resources/src/main/kotlin/constants/: AppConstants.kt  BuiltInRoleKey.kt  PaymentStatus.kt  RoleKey.kt  WechatConstants.kt
archetype-resources/src/main/kotlin/controllers/: PaymentController.kt  PermissionController.kt  RoleController.kt  RolePermissionController.kt  UserController.kt  UserRoleController.kt
archetype-resources/src/main/kotlin/enums/: CharacterType.kt
archetype-resources/src/main/kotlin/helpers/: CodeHelper.kt  DateHelper.kt  (+6 more)
archetype-resources/src/main/resources/: application-dev.properties  application-dev.yaml  application-prd.properties  application-prd.yaml  application.properties  application.yaml  logback-spring.xml  logback.xml
templates/: Controller.kt  Mapper.kt  Mapper.xml  SearchRequest.kt  Service.kt  UserMapper.xml  UserService.kt
(+74 files in other folders)
