[project]
    authors = [{ name = "Bean", email = "bean@yuanfen.net" }]
    dependencies = ["inflection>=0.5.1"]
    description = ""
    license = "MIT"
    name = "code-generator-for-springboot"
    readme = "README.md"
    requires-python = ">=3.14.2"
    version = "1.0.0"

[dependency-groups]
    dev = ["ruff>=0.14.11"]
